--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,11 +8,11 @@ ext {
 def useProject = true;
 
 android {
-    compileSdkVersion 33
+    compileSdk 33
     defaultConfig {
         applicationId "com.hauyu.adsdk.demo"
         minSdkVersion 19
-        targetSdkVersion 31
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
