--- a/build.gradle
+++ b/build.gradle
@@ -18,9 +18,9 @@ buildscript {
         classpath 'com.android.tools.build:gradle:7.2.1'
         classpath 'com.google.gms:google-services:4.3.15'
 
-        classpath 'com.github.megatronking.stringfog:gradle-plugin:2.2.1'
-        // 选用加解密算法库，默认实现了 xor 和 aes-cbc 两种简单算法，也可以使用自己的加解密库。
-        classpath 'com.github.megatronking.stringfog:xor:1.1.0'
+        classpath 'com.github.megatronking.stringfog:gradle-plugin:4.0.1'
+        // 选用加解密算法库，默认实现了xor算法，也可以使用自己的加解密库。
+        classpath 'com.github.megatronking.stringfog:xor:4.0.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath 'com.tencent.mm:AndResGuard-gradle-plugin:1.2.20'
