1. 更新tradplus版本10.5.0.1 2. 更新vungle版本7.0.0

--- a/build.gradle
+++ b/build.gradle
@@ -51,10 +51,10 @@ allprojects {
 //        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
 //        maven { url 'https://maven.aliyun.com/repository/public' }
 //        maven { url 'https://maven.aliyun.com/repository/releases' }
+//        maven { url "https://anythink.jfrog.io/artifactory/android_sdk" }
         maven { url 'https://sdk.tapjoy.com/' }
         maven { url 'https://android-sdk.is.com/' }
         maven { url "https://s3.amazonaws.com/smaato-sdk-releases/" }
-        maven { url "https://anythink.jfrog.io/artifactory/android_sdk" }
         maven { url 'https://mvnrepository.com/artifact/com.inmobi.monetization/inmobi-ads' }
         maven { url 'https://dl-maven-android.mintegral.com/repository/mbridge_android_sdk_oversea' }
     }
