--- a/groovy/ads.gradle
+++ b/groovy/ads.gradle
@@ -1,3 +1,5 @@
+// 这是第三方广告平台的依赖文件
+// 更新时间:2023-12-29
 dependencies {
     implementation 'androidx.percentlayout:percentlayout:1.0.0'
     // firebase
