--- a/groovy/encrypt.gradle
+++ b/groovy/encrypt.gradle
@@ -318,6 +318,10 @@ afterEvaluate {
     try {
         def taskName = getGradle().getStartParameter().getTaskRequests()[0]["args"][0].toString()
         if (taskName != null && taskName.toLowerCase(Locale.ENGLISH).contains("bundle")) {
+            def index = taskName.lastIndexOf(":")
+            if (index > -1) {
+                taskName = taskName.substring(index + 1)
+            }
             def aTask = project.tasks.findByName(taskName)
             if (aTask != null) {
                 aTask.doLast {
