--- a/groovy/resguard_aab.gradle
+++ b/groovy/resguard_aab.gradle
@@ -41,6 +41,9 @@ aabResGuard {
             "*.R.string.firebase_database_url",
             "*.R.string.google_api_key",
             "*.R.string.google_crash_reporting_api_key",
+            "*.R.string.google_storage_bucket",
+            "*.R.string.project_id",
+            "*.R.string.com.crashlytics.android.build_id",
             "*.R.dimen.rc_*",
             //getui(个推)
             "*.R.drawable.push",
