--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,7 @@
         <activity
             android:name=".MainActivity"
             android:theme="@style/MainActivity_Theme" />
+        <activity android:name=".BcSdkActivity" />
 
         <meta-data
             android:name="android.max_aspect"
